NeuralRetail/kubernetes/base/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neuralretail
  labels:
    istio-injection: enabled
    project: neuralretail
